--- a/package.json
+++ b/package.json
@@ -3,13 +3,15 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "color": "^3.0.0",
+    "color": "^3.1.0",
     "immutable": "^3.8.2",
-    "lab-react-scripts": "^2.0.0-next.3",
-    "prop-types": "^15.6.1",
-    "react": "^16.4.0",
-    "react-dom": "^16.4.0",
-    "react-tether": "^0.6.1"
+    "prop-types": "^15.6.2",
+    "react": "^16.7.0",
+    "react-dom": "^16.7.0",
+    "react-tether": "^1.0.4"
+  },
+  "devDependencies": {
+    "react-scripts": "^2.1.1"
   },
   "scripts": {
     "start": "react-scripts start",
